@@ -5,7 +5,7 @@ __all__ = ["Repr", "repr", "recursive_repr"]
 import builtins
 from itertools import islice
 try:
-    from _thread import get_ident
+    from threading import get_ident
 except ImportError:
     from _dummy_thread import get_ident
 
